# Computational_intelligence2022

./: README.md  pyproject.toml
lab1/: README.md  solution.ipynb
lab2/: README.md  solution.ipynb
lab3/: RLAgent.py  solution.ipynb
