[tool.poetry]
name = "compintell"
version = "0.1.0"
description = ""
authors = ["MatteMagnaldi <101046044+MatteMagnaldi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
